# BUGS_OOP_PROJECT

./: CMakeLists.txt  CMakePresets.json  README.md
app/: main.cpp
include/Application/: Application.h  CircleMode.h  EllipseMode.h  Mode.h  RectangleMode.h
include/CameraManager/: CameraManager.h  ICameraSource.h
include/FaceDetector/: FaceDetector.h
include/ShapeDrawer/: ShapeDrawer.h  ShapeDrawerLib.h
include/Utils/: Logger.h  Utils.h
logs/: log.txt
src/: Application.cpp  CameraManager.cpp  FaceDetector.cpp  ShapeDrawer.cpp  Utils.cpp
